configured jwt token authentication and updated User model, and controller, and added jwt secret to env example file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -71,3 +71,8 @@ GOOGLE_REDIRECT_URL=http://localhost:8000/api/auth/social/callback
 GITHUB_CLIENT_ID=YOUR_CLIENT_ID
 GITHUB_CLIENT_SECRET=YOUR_CLIENT_SECRET
 GITHUB_REDIRECT_URL=http://localhost:8000/api/auth/social/callback
+
+JWT_SECRET=
+JWT_TTL=60
+JWT_REFRESH_TTL=20160
+JWT_ALGO=HS256
